# Web-Browser-Based-UI-for-MiR-ARTC

./: CMakeLists.txt  README.md
Flask Server/: main.py
Flask Server/static/css/: general.css
Flask Server/static/script/: script.js
Flask Server/templates/: agv_info.html  index.html  ur_controller.html
launch/: voxel_grid_filtering.launch
src/: extractpoint.cpp
